correct version bump

--- a/concourse/tasks/generate-package-version.yaml
+++ b/concourse/tasks/generate-package-version.yaml
@@ -18,12 +18,12 @@ run:
   - -exc
   - |
     cd repo
-    latest=$(git tag -l '20*'|tail -1)
+    latest=$(git tag -l '20*'|tail -1)  # TODO: use shell logic only
     latest_date=${latest/.*}
     todays_date=$(date '+%Y%m%d')
     if [[ $latest_date == $todays_date ]]; then
       latest_build=${latest/*.}
-      ((latest_build++))
+      latest_build=$((latest_build+1))
       new="${todays_date}.${latest_build}"
     else
       new="${todays_date}.00"
