--- a/concourse/tasks/gcloud-inject-package.yaml
+++ b/concourse/tasks/gcloud-inject-package.yaml
@@ -4,8 +4,8 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: google/cloud-sdk:alpine
-    tag: latest
+    repository: google/cloud-sdk
+    tag: alpine
 
 inputs:
 - name: credentials
