--- a/concourse/pipelines/linux-image-build-rhel.yaml
+++ b/concourse/pipelines/linux-image-build-rhel.yaml
@@ -6,6 +6,16 @@ resource_types:
     repository: frodenas/gcs-resource
 
 resources:
+- name: compute-image-tools
+  type: git
+  source:
+    uri: https://github.com/GoogleCloudPlatform/compute-image-tools.git
+    branch: master
+- name: guest-test-infra
+  type: git
+  source:
+    uri: https://github.com/GoogleCloudPlatform/guest-test-infra.git
+    branch: master
 # rhel
 - name: rhel-7-gcs
   type: gcs
