--- a/concourse/pipelines/linux-image-build.yaml
+++ b/concourse/pipelines/linux-image-build.yaml
@@ -1702,6 +1702,19 @@ jobs:
       publish_version: ((.:publish-version))
       wf: "debian/debian_10.publish.json"
       environment: "prod"
+
+- name: "build-test-manager-container"
+  plan:
+  - get: guest-test-infra
+  - task: get-credential
+    file: guest-test-infra/concourse/tasks/get-credential.yaml
+  - task: build-test-manager-container-image
+    file: guest-test-infra/concourse/tasks/build-container-image.yaml
+    vars:
+      destination: gcr.io/gcp-guest/test-manager:latest
+      dockerfile: ./container_images/test-manager/Dockerfile
+      context: ./guest-test-infra
+
 groups:
 - name: debian
   jobs:
