--- a/concourse/pipelines/linux-image-build.yaml
+++ b/concourse/pipelines/linux-image-build.yaml
@@ -1813,6 +1813,18 @@ jobs:
       wf: "debian/debian_11.publish.json"
       environment: "prod"
 
+- name: build-test-manager-container
+  plan:
+  - get: guest-test-infra
+  - task: get-credential
+    file: guest-test-infra/concourse/tasks/get-credential.yaml
+  - task: build-test-manager-container-image
+    file: guest-test-infra/concourse/tasks/build-container-image.yaml
+    vars:
+      destination: gcr.io/gcp-guest/test-manager:latest
+      dockerfile: ./container_images/test-manager/Dockerfile
+      context: ./guest-test-infra
+
 groups:
 - name: debian
   jobs:
@@ -1886,3 +1898,5 @@ groups:
   - publish-to-prod-rhel-7-7-sap
   - publish-to-prod-rhel-8-1-sap
   - publish-to-prod-rhel-8-2-sap
+- name: test-manager-container
+  - build-test-manager-container
