--- a/container_images/cloudbuild.yaml
+++ b/container_images/cloudbuild.yaml
@@ -17,6 +17,8 @@ steps:
   args: ['build', '--tag=gcr.io/$PROJECT_ID/gointegtest:latest', '--tag=gcr.io/$PROJECT_ID/gointegtest:$COMMIT_SHA', './container_images/gointegtest']
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '--tag=gcr.io/$PROJECT_ID/pytest:latest', '--tag=gcr.io/$PROJECT_ID/pytest:$COMMIT_SHA', './container_images/pytest']
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['build', '--tag=gcr.io/$PROJECT_ID/fly-validate-pipelines:latest', '--tag=gcr.io/$PROJECT_ID/fly-validate-pipelines:$COMMIT_SHA', './container_images/fly-validate-pipelines']
 images:
   - 'gcr.io/$PROJECT_ID/gocheck:latest'
   - 'gcr.io/$PROJECT_ID/gocheck:$COMMIT_SHA'
@@ -36,3 +38,5 @@ images:
   - 'gcr.io/$PROJECT_ID/gointegtest:$COMMIT_SHA'
   - 'gcr.io/$PROJECT_ID/pytest:latest'
   - 'gcr.io/$PROJECT_ID/pytest:$COMMIT_SHA'
+  - 'gcr.io/$PROJECT_ID/fly-validate-pipelines:latest'
+  - 'gcr.io/$PROJECT_ID/fly-validate-pipelines:$COMMIT_SHA'
