--- a/imagetest/Dockerfile
+++ b/imagetest/Dockerfile
@@ -1,4 +1,4 @@
-# Copyright 2021 Google Inc. All Rights Reserved.
+# Copyright 2021 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -11,14 +11,25 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-FROM golang as builder
 
-WORKDIR /go/src/
+FROM golang:alpine as builder
+
+WORKDIR /build
 COPY . .
-RUN chmod +x ./container_images/cloud-image-tests/build.sh
-RUN ./container_images/cloud-image-tests/build.sh
+RUN mkdir /out
 
-FROM alpine
+ENV CGO_ENABLED 0
+ENV GOOS linux
+ENV GO111MODULE on
+
+RUN go mod download
+RUN go build -o /out/wrapper ./imagetest/cmd/wrapper/main.go
+RUN go build -o /out/manager ./imagetest/cmd/manager/main.go
+RUN for suite in ./imagetest/test_suites/*; do \
+  cd $suite; go test -c; mv *.test /out; cd ..; \
+  done
+
+FROM alpine:edge
 COPY --from=builder /out/* /
 
 ENTRYPOINT ["/manager"]
