--- a/imagetest/Dockerfile
+++ b/imagetest/Dockerfile
@@ -25,8 +25,8 @@ ENV GO111MODULE on
 RUN go mod download
 RUN go build -o /out/wrapper ./imagetest/cmd/wrapper/main.go
 RUN go build -o /out/manager ./imagetest/cmd/manager/main.go
-RUN for suite in ./imagetest/test_suites/*; do \
-  cd $suite; go test -c; mv *.test /out; cd ../../../; \
+RUN cd imagetest/test_suites; for suite in *; do \
+  cd $suite; go test -c; mv *.test /out; cd ..; \
   done
 
 FROM alpine:edge
