--- a/concourse/pipelines/partner-image-export.yaml
+++ b/concourse/pipelines/partner-image-export.yaml
@@ -17,133 +17,133 @@ resources:
   source:
     uri: https://github.com/GoogleCloudPlatform/guest-test-infra.git
     branch: master
-- name: cos-81-lts
+- name: cos-81-lts-gcs
   type: gcs
   source:
     bucket: gce-image-archive
     json_key: |
       ((gcs-key.credential))
     regexp: "partner/cos/cos-81-lts-v([0-9]+).tar.gz"
-- name: cos-85-lts
+- name: cos-85-lts-gcs
   type: gcs
   source:
     bucket: gce-image-archive
     json_key: |
       ((gcs-key.credential))
     regexp: "partner/cos/cos-85-lts-v([0-9]+).tar.gz"
-- name: cos-89-lts
+- name: cos-89-lts-gcs
   type: gcs
   source:
     bucket: gce-image-archive
     json_key: |
       ((gcs-key.credential))
     regexp: "partner/cos/cos-89-lts-v([0-9]+).tar.gz"
-- name: cos-dev
+- name: cos-dev-gcs
   type: gcs
   source:
     bucket: gce-image-archive
     json_key: |
       ((gcs-key.credential))
     regexp: "partner/cos/cos-dev-v([0-9]+).tar.gz"
-- name: fedora-33
+- name: fedora-33-gcs
   type: gcs
   source:
     bucket: gce-image-archive
     json_key: |
       ((gcs-key.credential))
     regexp: "partner/fedora/fedora-33-v([0-9]+).tar.gz"
-- name: fedora-coreos-next
+- name: fedora-coreos-next-gcs
   type: gcs
   source:
     bucket: gce-image-archive
     json_key: |
       ((gcs-key.credential))
     regexp: "partner/fedora/fedora-coreos-next-v([0-9]+).tar.gz"
-- name: fedora-coreos-stable
+- name: fedora-coreos-stable-gcs
   type: gcs
   source:
     bucket: gce-image-archive
     json_key: |
       ((gcs-key.credential))
     regexp: "partner/fedora/fedora-coreos-stable-v([0-9]+).tar.gz"
-- name: fedora-coreos-testing
+- name: fedora-coreos-testing-gcs
   type: gcs
   source:
     bucket: gce-image-archive
     json_key: |
       ((gcs-key.credential))
     regexp: "partner/fedora/fedora-coreos-testing-v([0-9]+).tar.gz"
-- name: freebsd-11
+- name: freebsd-11-gcs
   type: gcs
   source:
     bucket: gce-image-archive
     json_key: |
       ((gcs-key.credential))
     regexp: "partner/freebsd/freebsd-11-v([0-9]+).tar.gz"
-- name: freebsd-12
+- name: freebsd-12-gcs
   type: gcs
   source:
     bucket: gce-image-archive
     json_key: |
       ((gcs-key.credential))
     regexp: "partner/freebsd/freebsd-12-v([0-9]+).tar.gz"
-- name: freebsd-13
+- name: freebsd-13-gcs
   type: gcs
   source:
     bucket: gce-image-archive
     json_key: |
       ((gcs-key.credential))
     regexp: "partner/freebsd/freebsd-13-v([0-9]+).tar.gz"
-- name: opensuse-leap-15
+- name: opensuse-leap-15-gcs
   type: gcs
   source:
     bucket: gce-image-archive
     json_key: |
       ((gcs-key.credential))
     regexp: "partner/suse/opensuse-leap-15-v([0-9]+).tar.gz"
-- name: sles-12
+- name: sles-12-gcs
   type: gcs
   source:
     bucket: gce-image-archive
     json_key: |
       ((gcs-key.credential))
     regexp: "partner/suse/sles-12-v([0-9]+).tar.gz"
-- name: sles-15
+- name: sles-15-gcs
   type: gcs
   source:
     bucket: gce-image-archive
     json_key: |
       ((gcs-key.credential))
     regexp: "partner/suse/sles-15-v([0-9]+).tar.gz"
-- name: ubuntu-1804-lts
+- name: ubuntu-1804-gcs
   type: gcs
   source:
     bucket: gce-image-archive
     json_key: |
       ((gcs-key.credential))
     regexp: "partner/ubuntu/ubuntu-1804-lts-v([0-9]+).tar.gz"
-- name: ubuntu-2004-lts
+- name: ubuntu-2004-gcs
   type: gcs
   source:
     bucket: gce-image-archive
     json_key: |
       ((gcs-key.credential))
     regexp: "partner/ubuntu/ubuntu-2004-lts-v([0-9]+).tar.gz"
-- name: ubuntu-pro-1604-lts
+- name: ubuntu-pro-1604-gcs
   type: gcs
   source:
     bucket: gce-image-archive
     json_key: |
       ((gcs-key.credential))
     regexp: "partner/ubuntu/ubuntu-pro-1604-lts-v([0-9]+).tar.gz"
-- name: ubuntu-pro-1804-lts
+- name: ubuntu-pro-1804-gcs
   type: gcs
   source:
     bucket: gce-image-archive
     json_key: |
       ((gcs-key.credential))
     regexp: "partner/ubuntu/ubuntu-pro-1804-lts-v([0-9]+).tar.gz"
-- name: ubuntu-pro-2004-lts
+- name: ubuntu-pro-2004-gcs
   type: gcs
   source:
     bucket: gce-image-archive
